--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -46,7 +46,7 @@
 
 .mat-table__wrapper--dashboard .mat-table {
 	min-width: 600px !important;
-	width    : 100% !important;
+	width: 100% !important;
 }
 
 .position-static {
@@ -54,8 +54,8 @@
 }
 
 body {
-	color      : #454D67 !important;
-	font-family: 'Poppins';
+	color: #454d67 !important;
+	font-family: "Poppins";
 }
 
 .text-color {
@@ -67,7 +67,7 @@ body {
 }
 
 .success-button {
-	color           : #fff !important;
+	color: #fff !important;
 	background-color: rgb(24, 179, 24) !important;
 }
 
@@ -100,30 +100,30 @@ body {
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
 	-webkit-appearance: none;
-	margin            : 0;
+	margin: 0;
 }
 
 /* Firefox */
-input[type=number] {
+input[type="number"] {
 	-moz-appearance: textfield;
 }
 
 .kt-pointer {
-	cursor: pointer
+	cursor: pointer;
 }
 
 .mat-button-toggle-label-content {
-	padding: 0 !important
+	padding: 0 !important;
 }
 
 .mat-raised-button.filter {
-	min-width  : auto !important;
-	padding    : 5px !important;
+	min-width: auto !important;
+	padding: 5px !important;
 	line-height: inherit;
 }
 
 .text-primary {
-	color: #0778FA !important;
+	color: #0778fa !important;
 }
 
 .font-weight-500 {
@@ -132,21 +132,21 @@ input[type=number] {
 
 // spinner
 .spinner-center {
-	display        : flex;
+	display: flex;
 	justify-content: center;
-	flex-direction : column;
-	padding-left   : 50%;
-	width          : 100%;
-	height         : 100%;
+	flex-direction: column;
+	padding-left: 50%;
+	width: 100%;
+	height: 100%;
 }
 
 // vertical and horizontal center text
 .h-v-text-center {
-	display        : flex;
+	display: flex;
 	justify-content: center;
-	flex-direction : column;
-	text-align     : center;
-	height         : 100%;
+	flex-direction: column;
+	text-align: center;
+	height: 100%;
 }
 
 // mat-table
@@ -158,15 +158,15 @@ input[type=number] {
 .mat-tab-label,
 .mat-tab-link {
 	font-weight: bold !important;
-	color      : #c5c6c6 !important;
+	color: #c5c6c6 !important;
 }
 
 .mat-tab-label.mat-tab-label-active {
-	color: #454D67 !important;
+	color: #454d67 !important;
 }
 
 .mat-tab-group.mat-primary .mat-ink-bar {
-	background-color: #454D67 !important;
+	background-color: #454d67 !important;
 }
 
 // custom checkbox
@@ -174,73 +174,71 @@ input[type=number] {
 /* Hide the browser's default checkbox */
 .custom-checkbox input {
 	position: absolute;
-	opacity : 0;
-	cursor  : pointer;
-	height  : 0;
-	width   : 0;
+	opacity: 0;
+	cursor: pointer;
+	height: 0;
+	width: 0;
 }
 
 /* Create a custom checkbox */
 .checkmark {
-	position        : absolute;
-	top             : 35px;
-	left            : 0;
-	height          : 25px;
-	width           : 25px;
+	position: absolute;
+	top: 43px;
+	left: 0;
+	height: 20px;
+	width: 20px;
 	background-color: #eee;
-	border-radius   : 5px;
+	border-radius: 5px;
 }
 
 .label-checkbox {
-	margin-left: 25px;
+	margin-left: 20px;
 }
 
-
-
 /* On mouse-over, add a background color */
-.custom-checkbox :hover input~.checkmark {
+.custom-checkbox :hover input ~ .checkmark {
 	background-color: #ffffff;
 }
 
 /* When the checkbox is checked, add a background */
-.custom-checkbox input:checked~.checkmark {
+.custom-checkbox input:checked ~ .checkmark {
 	background-color: #969696;
 }
 
-.custom-checkbox input:disabled~.checkmark {
+.custom-checkbox input:disabled ~ .checkmark {
 	background-color: #eee;
-	opacity         : 0.5;
-	cursor          : not-allowed;
+	opacity: 0.5;
+	cursor: not-allowed;
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
 .checkmark:after {
-	content : "";
+	content: "";
 	position: absolute;
-	display : none;
+	display: none;
 }
 
 /* Show the checkmark when checked */
-.custom-checkbox input:checked~.checkmark:after {
+.custom-checkbox input:checked ~ .checkmark:after {
 	display: block;
 }
 
 /* Style the checkmark/indicator */
 .custom-checkbox .checkmark:after {
-	left             : 10px;
-	top              : 5px;
-	width            : 6px;
-	height           : 13px;
-	border           : solid white;
-	border-width     : 0 3px 3px 0;
+	left: 7px;
+    top: 3px;
+    width: 5px;
+    height: 12px;
+	border: solid white;
+	border-width: 0 3px 3px 0;
 	-webkit-transform: rotate(45deg);
-	-ms-transform    : rotate(45deg);
-	transform        : rotate(45deg);
+	-ms-transform: rotate(45deg);
+	transform: rotate(45deg);
 }
 
 // modal
 .mat-dialog-container {
-	border       : transparent !important;
+	border: transparent !important;
 	border-radius: 20px !important;
 }
 
@@ -254,17 +252,20 @@ input[type=number] {
 }
 
 .text-danger {
-	color: #ff7272
+	color: #ff7272;
 }
-.kt-portlet .kt-portlet__body{
+.kt-portlet .kt-portlet__body {
 	padding: 5px 15px !important;
 }
 
-.kt-mat-dialog-container__wrapper .mat-dialog-container .kt-portlet .kt-portlet__body{
+.kt-mat-dialog-container__wrapper
+	.mat-dialog-container
+	.kt-portlet
+	.kt-portlet__body {
 	max-height: 75vh !important;
 }
 
-mat-header-row{
+mat-header-row {
 	min-height: 30px !important;
 }
 
@@ -277,17 +278,18 @@ mat-header-row{
 	overflow: hidden;
 }
 
-@media (min-width: 1025px){
-.kt-container {
-    padding: 0 10px !important;
+@media (min-width: 1025px) {
+	.kt-container {
+		padding: 0 10px !important;
 	}
 }
 
-.mat-table{
+.mat-table {
 	font-family: Poppins, Helvetica, sans-serif !important;
 }
 
-.mat-cell, .mat-footer-cell{
+.mat-cell,
+.mat-footer-cell {
 	font-size: 12px !important;
 }
 
@@ -295,29 +297,27 @@ mat-header-row{
 /* width */
 ::-webkit-scrollbar {
 	width: 4px !important;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-	background: #f7f7f7 !important; 
-  
-  }
-   
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-	background: #d8dce6 !important;     
-	border-radius: 5px !important;
-  
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-	background: #555 !important; 
-  }
+}
 
-//   view schemes 
-.view-schemes{
-	.mat-tab-labels{
+/* Track */
+::-webkit-scrollbar-track {
+	background: #f7f7f7 !important;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: #d8dce6 !important;
+	border-radius: 5px !important;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: #555 !important;
+}
+
+//   view schemes
+.view-schemes {
+	.mat-tab-labels {
 		display: none !important;
 	}
 }
