bhushan: minor ui changes

--- a/gold-admin-frontend/src/app/views/theme/brand/brand.component.html
+++ b/gold-admin-frontend/src/app/views/theme/brand/brand.component.html
@@ -5,8 +5,8 @@
 			<img alt="logo" [attr.src]="headerLogo" [height]="height" [ngStyle]="{'transform': 'translate(50%, 0)'}" />
 		</a>
 	</div>
-	<div class="kt-aside__brand-tools" style="display: block; color: #B09868">
-		<div class="mb-3">
+	<div class="kt-aside__brand-tools" style="display: block; color: #ffde9c">
+		<div style="font-weight: 600; position: relative; bottom: 25px;">
 			{{goldRate}} /gm
 		</div>
 		<button ktToggle [options]="toggleOptions"
