--- a/gold-admin-frontend/src/app/views/pages/user-management/merchant/add-merchant/tabs/permission/permission.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/merchant/add-merchant/tabs/permission/permission.component.html
@@ -1,37 +1,23 @@
 <kt-toastr #toastr></kt-toastr>
 <kt-portlet>
     <kt-portlet-body>
-        <div class="row height">
-            <div class="col-8">
-                <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
-                    <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle matTreeNodePadding>
-                      <button mat-icon-button disabled></button>
-                      <mat-checkbox class="checklist-leaf-node"
-                                    [checked]="checklistSelection.isSelected(node)"
-                                    (change)="todoLeafItemSelectionToggle(node)">{{node.item | json}}</mat-checkbox>
-                    </mat-tree-node>
-                  
-                    <mat-tree-node *matTreeNodeDef="let node; when: hasNoContent" matTreeNodePadding>
-                      <button mat-icon-button disabled></button>
-                      <mat-form-field>
-                        <mat-label>New item...</mat-label>
-                        <input matInput #itemValue placeholder="Ex. Lettuce">
-                      </mat-form-field>
-                      <button mat-button (click)="saveNode(node, itemValue.value)">Save</button>
-                    </mat-tree-node>
-                  
-                    <mat-tree-node *matTreeNodeDef="let node; when: hasChild" matTreeNodePadding>
-                      <button mat-icon-button matTreeNodeToggle
-                              [attr.aria-label]="'toggle ' + node.filename">
-                        <mat-icon class="mat-icon-rtl-mirror">
-                          {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
-                        </mat-icon>
-                      </button>
-                      <mat-checkbox [checked]="descendantsAllSelected(node)"
-                                    [indeterminate]="descendantsPartiallySelected(node)"
-                                    (change)="todoItemSelectionToggle(node)">{{node.item}}</mat-checkbox>
-                    </mat-tree-node>
-                  </mat-tree>                  
+        <div class="row height justify-content-center">
+            <div class="col-7">
+                 <mat-tab-group>
+                   <mat-tab label="Category">
+                    <div class="row justify-content-center">
+                    <div class="col-10">
+                      <label class="custom-checkbox">
+                        <span class="label-checkbox text-color font-weight-500">Select All</span>
+                        <input type="checkbox" class="" id="view" value="View">
+                        <span class="checkmark top-0"></span>
+                    </label>
+                    </div>
+                    </div>
+                    </mat-tab>
+                   <mat-tab label="Sub-Category"></mat-tab>
+                   <mat-tab label="Product"></mat-tab>
+                 </mat-tab-group>                
             </div>
         </div>
     </kt-portlet-body>
