--- a/gold-admin-frontend/src/app/views/pages/upload-data/upload-offer/upload-offer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/upload-data/upload-offer/upload-offer.component.html
@@ -16,7 +16,7 @@
     </kt-portlet-body>
     <kt-portlet-footer>
         <div class="row p-3">
-            <div class="col-lg-12">
+            <div class="col-lg-12 kt-padding-l-15">
                 <kt-button [type]="'button'" [value]="'Save'" (click)="save()">
                 </kt-button>
             </div>
