--- a/gold-admin-frontend/src/app/views/partials/components/uplod-data-image/uplod-data-image.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/uplod-data-image/uplod-data-image.component.html
@@ -2,24 +2,24 @@
     <!-- <kt-portlet-header [title]="title"></kt-portlet-header>
     <kt-portlet-body> -->
         <div class="row">
-            <div class="col-4 kt-margin-t-10" *ngFor="let image of images;index as idx">
+            <div class="col-4 kt-margin-t-10 kt-margin-b-10" *ngFor="let image of images;index as idx">
                 <div class="position-relative">
 
-                    <span class="pos-edit" (click)="edit(idx)">
-                        <img src="../../../../../assets/media/icons/edit.svg" alt="" class="kt-pointer">
+                    <span class="pos-action" >
+                        <img src="../../../../../assets/media/icons/edit.svg" alt="" class="kt-pointer kt-margin-r-10" (click)="edit(idx)">
+                        <img src="../../../../../assets/media/icons/cancel.svg" alt="" class="kt-pointer" (click)="removeImages(idx);">                   
                     </span>
-                    <span class="pos-remove" (click)="removeImages(idx);">
-                        <img src="../../../../../assets/media/icons/cancel.svg" alt="" class="kt-pointer">
-                    </span>
-                    <img [src]="image" *ngIf="image" class="w-100 div-height border-radius" (click)="open(idx)">
+                    <img [src]="image" *ngIf="image" class="w-100 div-height border-radius kt-pointer" (click)="open(idx)">
 
                 </div>
             </div>
-            <div class="col-2 div-height kt-margin-t-10">
-                <input type="file" accept="image/*" class="d-none" #file (change)="uploadImages($event)">
-                <button (click)="file.click();index = null" class="img-add">
-                    <img src="../../../../../assets/media/icons/add.svg" alt="">
-                </button>
+            <div class="col-2 kt-margin-t-10 kt-margin-b-10">
+                <div class="div-height kt-pointer">
+                    <input type="file" accept="image/*" class="d-none" #file (change)="uploadImages($event)">
+                    <button (click)="file.click();index = null" class="img-add w-100">
+                        <img src="../../../../../assets/media/icons/add.svg" alt="">
+                    </button>
+                </div>
             </div>
         </div>
     <!-- </kt-portlet-body> -->
